[package]
name = "voiceflow"
authors = ["zainthemaynnn <zainyusufazam@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
derive_builder = "0.10.2"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
strum_macros = "0.21.0"

[dev-dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.10.0", features = ["rt", "macros"] }
